# openmep-suite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.node  LICENSE  README.md  SECURITY.md  colab_launcher.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_region.md
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: config.py  main.py
backend/adapters/: base_adapter.py
backend/api/: auth.py
backend/engines/: adapters_factory.py
backend/models/: electrical.py  fire.py  mechanical.py  plumbing.py
backend/tests/: conftest.py  test_cable_sizing.py  test_electrical.py  test_electrical_endpoints.py  test_fire.py  test_hvac.py  test_plumbing.py
docs/: API_DOCS.md  DEPLOYMENT.md  STANDARDS_REFERENCE.md  USER_GUIDE.md  index.html
docs/contributing/: ADDING_NEW_CALCULATOR.md  ADDING_NEW_REGION.md
docs/regions/: AUSTRALIA_GUIDE.md  EUROPE_GUIDE.md  GCC_GUIDE.md  INDIA_GUIDE.md
docs/sample_outputs/: OpenMEP_Sample_BOQ.xlsx
scripts/: generate_pdf_report.py  generate_tech_docs.py
src/: README.md  index.ts  package.json  tsconfig.json  vitest.config.ts
src/engines/: compliance-guardian.ts  pdf-generator.ts  submission-service.ts
src/routes/: projects.ts  submission.ts
streamlit_app/: Home.py  app.py  report_generator.py  requirements.txt  utils.py
streamlit_app/.streamlit/: config.toml
(+58 files in other folders)
